Fondo agregado - falta responsive

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url("https://wallpaperaccess.com/full/2092839.jpg");
+  background-image: url("/src/utils/fondo.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
