Sweet alert y sonidos

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -28,3 +28,7 @@ header{
     /* border:0px; */
     border: 2px solid black;
 }
+
+.boton-reiniciar:hover {
+    background-color: rgb(155, 25, 35);
+}    
