--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url("/src/utils/fondo.jpg");
+  background-image: url("/src/images/fondo.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
