--- a/src/styles/Carta.css
+++ b/src/styles/Carta.css
@@ -13,7 +13,7 @@
     height: 125px;   
     background-color: rgb(202, 32, 137);
     border-radius: 50%;
-    background-image: url("/src/utils/Pokéball02.png");
+    background-image: url("/src/images/Pokéball02.png");
     background-position: center center;
     background-size: cover;
 }
@@ -32,4 +32,9 @@
 .ReactFlipCard{
     width: 100%;
     height: 100%;   
+}
+
+.front:hover{
+    width: 130px;
+    height: 130px;   
 }
