--- a/src/styles/Tablero.css
+++ b/src/styles/Tablero.css
@@ -7,3 +7,21 @@
     justify-content: space-around;
     margin-top: 40px;
 }
+
+@media screen and (max-width: 750px){   
+    .tablero{       
+        width: 300px;
+        height: 250px;     
+        margin-top: 50px;            
+    }
+}
+
+@media screen and (max-width: 414px){   
+    .tablero{       
+        width: 320px;
+        height: 472px;     
+        margin-top: 50px;            
+    }
+}
+
+
