--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,7 +4,7 @@ body{
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-color: blue;
+  background-color: #FFB101;
 }
 
 div:focus{
